--- a/app/src/main/res/layout/activity_applicant_details.xml
+++ b/app/src/main/res/layout/activity_applicant_details.xml
@@ -58,8 +58,8 @@
                     <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:tint="?attr/colorPrimary"
-                        app:srcCompat="@drawable/outline_mail_24" />
+                        app:srcCompat="@drawable/outline_mail_24"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -101,8 +101,8 @@
                     <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:tint="?attr/colorPrimary"
-                        app:srcCompat="@drawable/ic_call_24" />
+                        app:srcCompat="@drawable/ic_call_24"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -144,8 +144,8 @@
                     <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:tint="?attr/colorPrimary"
-                        app:srcCompat="@drawable/ic_location_24" />
+                        app:srcCompat="@drawable/ic_location_24"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -187,8 +187,8 @@
                     <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:tint="?attr/colorPrimary"
-                        app:srcCompat="@drawable/ic_work_24" />
+                        app:srcCompat="@drawable/ic_work_24"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -230,8 +230,8 @@
                     <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:tint="?attr/colorPrimary"
-                        app:srcCompat="@drawable/ic_bank_24" />
+                        app:srcCompat="@drawable/ic_bank_24"
+                        app:tint="?attr/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="0dp"
